gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/issue21685_main.d
version https://git-lfs.github.com/spec/v1
oid sha256:9b3eb20577a0d2c62a58a4a179f58554fc59b7154af0f69b504d2f156d1452f4
size 444
